<?xml version="1.0"?>
<package>
  <name>return_local_planner</name>
  <version>0.0.0</version>
  <description>

	return_local_planner implements a plugin to the base_local_planner. This the robot will follow the global path as PID.   

  </description>

  <maintainer email="muratkoc503@gmail.com">Murat KOÇ</maintainer>

  <license>none</license>

  <author email="muratkoc503@gmail.com">Murat KOÇ</author> -->


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>base_local_planner</build_depend>

  <build_depend>control_toolbox</build_depend>

  <build_depend>cmake_modules</build_depend> 

  <build_depend>costmap_2d</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_depend>nav_core</build_depend>

  <build_depend>nav_msgs</build_depend>

  <build_depend>pluginlib</build_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>tf</build_depend>

  <build_depend>tf_conversions</build_depend>

  <build_depend>std_msgs</build_depend>



  <run_depend>base_local_planner</run_depend>

  <run_depend>control_toolbox</run_depend>

  <run_depend>costmap_2d</run_depend>

  <run_depend>geometry_msgs</run_depend>

  <run_depend>nav_core</run_depend>

  <run_depend>nav_msgs</run_depend>

  <run_depend>pluginlib</run_depend>

  <run_depend>roscpp</run_depend>

  <run_depend>tf</run_depend>

  <run_depend>tf_conversions</run_depend>

  <run_depend>std_msgs</run_depend>

  <build_depend>weedbot_robot</build_depend>
  <run_depend>weedbot_robot</run_depend>

  <build_depend>my_class</build_depend>
  <run_depend>my_class</run_depend>
  <build_depend>base_local_planner</build_depend>
  <run_depend>base_local_planner</run_depend>
  <build_depend>costmap_2d</build_depend>
  <run_depend>costmap_2d</run_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>



  <export>

    <nav_core plugin="${prefix}/blp_plugin.xml"/>

  </export>


</package>
